testsuite/tests/backpack/should_fail/bkpfail03.bkp
unit q where
    module M1 where
        data M = M
    signature M2(M) where
        import M1
unit p where
    module M2 where
        data M = M
    include q
